# near-openrpc-client-rs

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  sync-openrpc.yml
examples/: mainnet.rs
src/: client.rs  errors.rs  generated.rs  lib.rs  query_helpers.rs  token_helpers.rs  types.rs
tests/: query_enums.rs
