[package]
name = "near-openrpc-client"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Generated Rust types and async client for the NEAR Protocol JSON-RPC API, built from the official OpenRPC specification"
license = "MIT OR Apache-2.0"
repository = "https://github.com/near/near-openrpc-client-rs"
keywords = ["near", "blockchain", "rpc", "json-rpc", "openrpc"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regress = "0.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
near-token = { version = "0.3", optional = true }
near-gas = { version = "0.3", optional = true }

[build-dependencies]
typify = "0.6"
serde_json = "1"
syn = "2"
prettyplease = "0.2"

[features]
default = ["client"]
client = ["reqwest", "tokio"]
near-types = ["near-token", "near-gas"]
